# solvelitigation-backend

./: .gitignore  cookies.txt  ecosystem.config.js  package-lock.json  package.json  startCleanupUnverif  tsconfig.json
backend/: .gitignore  Ensure  Request,  cookies.txt  ecosystem.config.cjs  ecosystem.config.js  nlp.callback.controller.ts  package-lock.json  package.json  tsconfig.json  uploadSingleJudgment.controller.ts
backend/_backup_2026-01-28/: judgment.model.ts  judgmentUpload.controller.ts
backend/routes/: judgmentUpload.js
backend/scripts/: disk-check.sh  enqueue-pending-nlp.js  expire-subscriptions.js  reset-superadmin-password.js  scan-inbox.sh
backend/src/: app.ts  config.ts  server.ts  server.ts.bak-2026-02-16-1808
nlp_service/: .gitignore  app.py  document_processor.py  headnote_generator_local.py  pdf_processor.py  requirements.txt
nlp_service/app/: celery_app.py  config.py  main.py
nlp_service/legacy/: case_analyzer.py  download_judgment.py  download_real_pdf.py  ecosystem.nlp.config.js  headnote_generator.py  judgment_routes.py  pyproject.toml  section_mapper.py  serve.py
nlp_service/legacy/summarizer/: ai_summarizer.py
nlp_service/legacy/workers/: judgment_worker.py
nlp_service/nlp_app/: celery_app.py  env_loader.py  legal_analyzer.py  main.py  pdf_converter.py  requirements-gpu.txt  requirements.txt  tasks.py
nlp_service/workers/: judgment_worker.py  judgment_worker.py.bak
src/: server.ts  server.ts.BACKUP  server.ts.BROKEN_2025-12-24_21-41-51  server.ts.bak
src/config/: config.ts  db.ts  index.ts  multer.ts  planLimits.ts
(+207 files in other folders)
