[tool.poetry]
name = "nlp_service"
version = "0.1.0"
description = "Internal AI module for SolveLitigation"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
transformers = "^4.54.1"
regex = "^2025.7.34"
python-dotenv = "^1.1.1"
pymongo = "^4.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
